[gd_scene load_steps=6 format=3 uid="uid://iq7kcx68qrpj"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_agiwi"]
[ext_resource type="Script" path="res://scripts/ConnectionManager.gd" id="2_1kw7d"]
[ext_resource type="Script" path="res://scripts/CardManager.gd" id="2_efeh0"]
[ext_resource type="PackedScene" uid="uid://bw0j2cm606iv" path="res://fab/Card.tscn" id="3_diurv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nm32r"]
size = Vector2(258, 159)

[node name="GameManager" type="Node2D"]
script = ExtResource("1_agiwi")

[node name="CardManager" type="Node2D" parent="."]
z_index = 5
script = ExtResource("2_efeh0")

[node name="CardDropArea2d" type="Area2D" parent="CardManager"]

[node name="DropPosition" type="Node2D" parent="CardManager/CardDropArea2d"]
position = Vector2(0, -153)

[node name="ColorRect" type="ColorRect" parent="CardManager/CardDropArea2d"]
offset_left = -123.0
offset_top = -220.0
offset_right = 121.0
offset_bottom = -85.0
mouse_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardManager/CardDropArea2d"]
position = Vector2(-2, -152)
shape = SubResource("RectangleShape2D_nm32r")

[node name="CardDropArea2d2" type="Area2D" parent="CardManager"]
position = Vector2(-210, 256)

[node name="DropPosition" type="Node2D" parent="CardManager/CardDropArea2d2"]
position = Vector2(0, -151)

[node name="ColorRect" type="ColorRect" parent="CardManager/CardDropArea2d2"]
offset_left = -123.0
offset_top = -220.0
offset_right = 121.0
offset_bottom = -85.0
mouse_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardManager/CardDropArea2d2"]
position = Vector2(-2, -152)
shape = SubResource("RectangleShape2D_nm32r")

[node name="ConnectionManager" type="Node2D" parent="."]
script = ExtResource("2_1kw7d")

[node name="Host" type="Button" parent="ConnectionManager"]
offset_left = -552.0
offset_top = 232.0
offset_right = -508.0
offset_bottom = 263.0
text = "Host"

[node name="Join" type="Button" parent="ConnectionManager"]
offset_left = -478.0
offset_top = 232.0
offset_right = -440.0
offset_bottom = 263.0
text = "Join
"

[node name="ServerDoSomething" type="Button" parent="ConnectionManager"]
offset_right = 193.0
offset_bottom = 31.0
text = "Server sends something"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DebugCard" parent="." instance=ExtResource("3_diurv")]

[connection signal="area_entered" from="CardManager/CardDropArea2d" to="CardManager" method="_on_card_drop_area_2d_area_entered"]
[connection signal="area_exited" from="CardManager/CardDropArea2d" to="CardManager" method="_on_card_drop_area_2d_area_exited"]
[connection signal="area_entered" from="CardManager/CardDropArea2d2" to="CardManager" method="_on_card_drop_area_2d_area_entered"]
[connection signal="area_exited" from="CardManager/CardDropArea2d2" to="CardManager" method="_on_card_drop_area_2d_area_exited"]
[connection signal="pressed" from="ConnectionManager/Host" to="ConnectionManager" method="_on_host_pressed"]
[connection signal="pressed" from="ConnectionManager/Join" to="ConnectionManager" method="_on_join_pressed"]
[connection signal="pressed" from="ConnectionManager/ServerDoSomething" to="ConnectionManager" method="_on_server_do_something_pressed"]
